--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "https://github.com/MultiverseLearningProducts/musicians-bands/issues"
   },
   "dependencies": {
-    "jest": "27.5.1",
-    "sequelize": "6.17.0",
-    "sqlite3": "5.0.2"
+    "jest": "^28.1.3",
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   }
 }
